<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="isEditing" type="boolean"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/profile_name_label"
            android:text="@string/text_name"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/profile_name_edittext"
            app:layout_constraintRight_toLeftOf="@id/profile_name_edittext"
            app:layout_constraintHorizontal_chainStyle="packed"
            style="@style/AppTheme.ProfileTextViewStyle" />

        <EditText
            android:id="@+id/profile_name_edittext"
            android:layout_marginTop="20dp"
            android:enabled="false"
            app:layout_constraintLeft_toRightOf="@id/profile_name_label"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="James"
            style="@style/AppTheme.ProfileEditTextStyle" />

        <TextView
            android:id="@+id/profile_age_label"
            android:text="@string/text_age"
            android:layout_marginTop="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_name_label"
            app:layout_constraintBottom_toBottomOf="@id/profile_age_edittext"
            app:layout_constraintRight_toLeftOf="@id/profile_age_edittext"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            style="@style/AppTheme.ProfileTextViewStyle" />

        <EditText
            android:id="@+id/profile_age_edittext"
            android:layout_marginTop="15dp"
            android:enabled="false"
            app:layout_constraintLeft_toRightOf="@id/profile_age_label"
            app:layout_constraintTop_toBottomOf="@id/profile_name_label"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="23"
            style="@style/AppTheme.ProfileEditTextStyle" />

        <TextView
            android:id="@+id/profile_gender_label"
            android:text="@string/text_gender"
            android:layout_marginTop="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_age_label"
            app:layout_constraintBottom_toBottomOf="@id/profile_gender_edittext"
            app:layout_constraintRight_toLeftOf="@id/profile_gender_edittext"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            style="@style/AppTheme.ProfileTextViewStyle" />

        <EditText
            android:id="@+id/profile_gender_edittext"
            android:layout_marginTop="15dp"
            android:enabled="false"
            app:layout_constraintLeft_toRightOf="@id/profile_gender_label"
            app:layout_constraintTop_toBottomOf="@id/profile_age_label"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="Male"
            style="@style/AppTheme.ProfileEditTextStyle" />

        <TextView
            android:id="@+id/profile_hobbies_label"
            android:text="@string/text_hobbies"
            android:layout_marginTop="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_gender_label"
            app:layout_constraintBottom_toBottomOf="@id/profile_hobbies_edittext"
            app:layout_constraintRight_toLeftOf="@id/profile_hobbies_edittext"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            style="@style/AppTheme.ProfileTextViewStyle" />

        <EditText
            android:id="@+id/profile_hobbies_edittext"
            android:layout_marginTop="15dp"
            app:layout_constraintLeft_toRightOf="@id/profile_hobbies_label"
            app:layout_constraintTop_toBottomOf="@id/profile_gender_label"
            app:layout_constraintRight_toRightOf="parent"
            app:enableView="@{isEditing}"
            tools:text="Soccer, tennis, golf"
            style="@style/AppTheme.ProfileEditTextStyle" />

    </android.support.constraint.ConstraintLayout>
</layout>